--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -280,13 +280,13 @@
                     android:id="@+id/personalInfoBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
+                    android:drawablePadding="15dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center_vertical"
                     android:text="@string/info_label"
                     android:textColor="@color/blue"
                     android:textSize="13sp"
-                    app:drawableStartCompat="@drawable/ic_infos"
+                    app:drawableStartCompat="@drawable/ic_personnal_info"
                     app:drawableTint="@color/blue" />
 
                 <TextView
@@ -300,7 +300,7 @@
                     android:text="@string/contracts_label"
                     android:textColor="@color/blue"
                     android:textSize="13sp"
-                    app:drawableStartCompat="@drawable/ic_contrats"
+                    app:drawableStartCompat="@drawable/ic_my_contrats"
                     app:drawableTint="@color/blue" />
 
                 <TextView
@@ -314,15 +314,14 @@
                     android:text="@string/help_label"
                     android:textColor="@color/blue"
                     android:textSize="13sp"
-                    app:drawableStartCompat="@drawable/ic_question"
-                    app:drawableTint="@color/blue" />
+                    app:drawableStartCompat="@drawable/ic_assistance" />
 
                 <TextView
                     android:id="@+id/bankCardsBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:drawablePadding="12dp"
                     android:layout_marginTop="20dp"
-                    android:drawablePadding="15dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center_vertical"
                     android:text="@string/cards_bank_label"
@@ -390,7 +389,7 @@
                     android:text="@string/phone_string"
                     android:textColor="@color/blue"
                     android:textSize="12sp"
-                    app:drawableStartCompat="@drawable/ic_phone" />
+                    app:drawableStartCompat="@drawable/ic_call" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -402,7 +401,7 @@
                     android:text="@string/phone_string2"
                     android:textColor="@color/blue"
                     android:textSize="12sp"
-                    app:drawableStartCompat="@drawable/ic_phone" />
+                    app:drawableStartCompat="@drawable/ic_call" />
 
                 <RelativeLayout
                     android:id="@+id/logoutBtn"
@@ -419,7 +418,7 @@
                         android:text="@string/logout_btn_label"
                         android:textColor="@color/blue"
                         android:textSize="13sp"
-                        app:drawableStartCompat="@drawable/ic_deconnect" />
+                        app:drawableStartCompat="@drawable/ic_deconnexion" />
                 </RelativeLayout>
             </LinearLayout>
 
